# parser-2gis

./: .audit_findings.json  .bandit.yml  .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_FIXES_PLAN.md  AUDIT_REPORT.md  CHANGELOG.md  CHANGES_REPORT.md  CODE_AUDIT_REPORT_2026_03_08.json  CODE_AUDIT_SUMMARY_RU.md  CODE_IMPROVEMENTS_2026_03_12.md  CODE_IMPROVEMENTS_REPORT_2026_03_08.md  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT_REPORT_2026_03_09.md  CONTRIBUTING.md  ERROR_FIXES_REPORT.md  ERROR_REPORT_TUI_PARSING.md  FINAL_AUDIT_REPORT.md  FINAL_AUDIT_REPORT_2026.md  FINAL_CODE_STATUS_2026_03_09.md  FINAL_QC_REPORT_2026_03_08.json  FIXES_APPLIED_2026_03_09.md  FIXES_REPORT.md  FIXES_REPORT_2025.md  FIXES_REPORT_2026_03_07.md  FIXES_REPORT_2026_03_08.md  FIXES_REPORT_2026_03_08_V2.md  FIXES_REPORT_2026_03_08_V3.md  FIXES_REPORT_2026_03_08_V4.md  FIXES_SUMMARY.md  FIXES_SUMMARY_2026_03_12.md  GITHUB_SYNC_INSTRUCTIONS.md  IMPROVEMENTS.md  IMPROVEMENTS_PLAN.md  KODA.md  MANIFEST.in  (+44 more)
.cline/memory/: docs_map.json  fix_log_2026-03-06.md  fix_log_2026-03-08_validator.md  fix_log_20260302_074638.md  fix_log_20260302_075340.md  fix_log_20260302_075819.md  fix_log_20260302_120000.md  fix_log_20260302_main_parser.md  fix_log_20260306_chrome_remote.md  fix_log_20260308_235800.md  fix_log_20260309_000304.md  fix_log_2026_03_08_cache.md  qc_report_20260305.json
.github/workflows/: dev_build.yml  release.yml  tests.yml
.qwen/memory/: qc_final_report_2026_03_09.json  qc_final_report_2026_03_09.md  qc_final_validation_2026_03_09.json  qc_worker_2026_03_09.json
docs/: API.md
docs/error-reports/: duplicate-ids-category-selector.md
parser_2gis/: __init__.py  __main__.py  audit-report.md  cache.py  common.py  config.py  config_service.py  constants.py  core_types.py  delay_utils.py  exceptions.py  interfaces.py  main.py  parallel_helpers.py  parallel_optimizer.py  parallel_parser.py  paths.py  protocols.py  pydantic_compat.py  refactoring_batch.py  shared_config_constants.py  signal_handler.py  statistics.py  temp_file_manager.py  types.py  validation.py  validator.py  validators.py  version.py
parser_2gis/application/: __init__.py  layer.py
parser_2gis/cache/: __init__.py  cache_utils.py  config_cache.py  manager.py  pool.py  serializer.py  validator.py
parser_2gis/chrome/: __init__.py  browser.py  browser_builder.py  constants.py  dom.py  exceptions.py  file_handler.py  health_monitor.py  http_cache.py  js_executor.py  options.py  rate_limiter.py  remote.py  remote.py.patch  request_interceptor.py  utils.py
parser_2gis/cli/: __init__.py  app.py  arguments.py  config.py  config_service.py  formatter.py  launcher.py  main.py  progress.py  validator.py
parser_2gis/config_services/: __init__.py  config_merger.py  config_validator.py
parser_2gis/constants/: __init__.py  buffer.py  cache.py  env_config.py  parser.py  security.py  validation.py
parser_2gis/data/: categories_93.py  cities_loader.py
parser_2gis/database/: __init__.py  error_handler.py
parser_2gis/gui/: app.py  category_selector.py  city_selector.py  error_popup.py  rubric_selector.py  settings.py  theme.py  urls_editor.py  urls_generator.py  utils.py
parser_2gis/infrastructure/: __init__.py  resource_monitor.py
parser_2gis/logger/: __init__.py  file_handler.py  handlers.py  logger.py  options.py  presentation_bridge.py  visual_logger.py
parser_2gis/logging/: __init__.py
parser_2gis/parallel/: __init__.py  builder.py  cleanup_utils.py  config.py  coordinator.py  error_handler.py  file_merger.py  filename_utils.py  helpers.py  lock_manager.py  memory_manager.py  merge_csv_handler.py  merge_lock_manager.py  merger.py  optimizer.py  options.py  parallel_parser.py  progress.py  progress_tracker.py  protocols.py  signal_handler.py  signal_subscription.py  strategies.py  temp_file_timer.py  thread_coordinator.py  thread_manager.py  url_parser.py
parser_2gis/parser/: __init__.py  adaptive_limits.py  config.py  end_of_results.py  exceptions.py  factory.py  options.py  smart_retry.py  utils.py
parser_2gis/resources/: __init__.py  categories_93.py  cities_loader.py
parser_2gis/runner/: __init__.py  cli.py  gui.py  runner.py
parser_2gis/tests/: test_critical_fixes.py  test_refactoring.py  test_refactoring_package_4.py
parser_2gis/tui/: __init__.py  app.py  components.py  logger.py  parallel.py
parser_2gis/tui_textual/: app.py  (+6 more)
scripts/: pyright_check.sh  update_cities_list.py  update_rubrics_list.py
testes/: conftest.py  test_chrome.py  test_cli_arguments.py  test_common.py  test_config.py  test_file_logger.py  test_gui_theme.py  test_gui_utils.py  test_integration.py  test_logger.py  test_main_categories_mode.py  test_new_improvements.py  test_parallel_parser.py  test_parser.py  test_parser_options.py  test_paths.py  test_runner.py  test_version_exceptions.py  test_writer.py
tests/: __init__.py  conftest.py  conftest_analysis.md  test_all_audit_fixes.py  test_all_fixes.py  test_all_improvements.py  test_architecture.py  test_architecture_antipatterns.py  test_architecture_boundaries.py  test_architecture_config_dataclasses.py  test_architecture_constraints.py  test_architecture_cycles.py  test_architecture_dependencies.py  test_architecture_di.py  test_architecture_dry.py  test_architecture_facades.py  test_architecture_fixes.py  test_architecture_god_classes.py  test_architecture_improvements.py  test_architecture_infrastructure.py  test_architecture_integration.py  test_architecture_integrity.py  test_architecture_layers.py  test_architecture_modularity.py  test_architecture_module_independence.py  test_architecture_no_cycles.py  test_architecture_no_duplicates.py  test_architecture_principles.py  test_architecture_protocols.py  test_architecture_refactoring.py  test_architecture_resources.py  test_architecture_separation.py  test_architecture_soc.py  test_architecture_solid.py  test_architecture_solid_extra.py  test_architecture_srp.py  test_architecture_validation.py  test_architecture_yagni.py  test_audit_additional.py  test_audit_comprehensive.py  (+184 more)
(+163 files in other folders)
