# ISSUE 001: PEP 517/518 build system configuration
[build-system]
requires = ["setuptools>=68.0", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

# ISSUE 010: PEP 621 — метаданные проекта (перенесены из setup.py)
[project]
name = "parser-2gis"
dynamic = ["version"]
description = "Парсер сайта 2GIS"
readme = "README.md"
license = "LGPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    {name = "Andy Trofimov", email = "interlark@gmail.com"},
]
keywords = ["parser", "scraper", "2gis"]
classifiers = [
    "Topic :: Internet",
    "Topic :: Utilities",
    "Operating System :: POSIX :: Linux",
    "Environment :: X11 Applications",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: Russian",
    "Intended Audience :: End Users/Desktop",
]

dependencies = [
    "pychrome>=0.2.4",
    "pydantic>=2.0.0,<3",
    "psutil>=5.4.8",
    "requests>=2.32.4",
    "xlsxwriter>=3.0.5",
    "rich>=13.0.0",
    "tqdm>=4.66.3",
    "jinja2>=3.1.6",
    "pillow>=10.3.0",
    "urllib3>=2.6.3",
    "setuptools>=78.1.1",
    "pyyaml>=6.0",
    "ratelimit>=2.2.1",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    # ISSUE 006: Обновлена версия pytest
    # ISSUE 007: Добавлен pytest-asyncio
    "pytest>=7.0,<10",
    "pytest-asyncio>=0.23,<1.0",
    "tox>=4.0",
    "pre-commit>=3.5",
    "wheel>=0.46.2",
    "pyinstaller>=6.6.0",
]
tui = ["textual>=0.50.0"]
all = [
    "textual>=0.50.0",
    "pytest>=7.0,<10",
    "pytest-asyncio>=0.23,<1.0",
    "tox>=4.0",
    "pre-commit>=3.5",
    "wheel>=0.46.2",
    "pyinstaller>=6.6.0",
]

[project.urls]
Documentation = "https://github.com/Githab-capibara/parser-2gis/wiki"
Homepage = "https://github.com/Githab-capibara/parser-2gis"
Changelog = "https://github.com/Githab-capibara/parser-2gis/blob/main/CHANGELOG.md"

[project.scripts]
parser-2gis = "parser_2gis:main"

# ISSUE 010: setuptools динамическая версия
[tool.setuptools.dynamic]
version = {attr = "parser_2gis.version.__version__"}

[tool.setuptools.packages.find]
include = ["parser_2gis*"]

[tool.ruff]
# Конфигурация ruff для линтинга и форматирования
# Синхронизировано с black и isort

# Максимальная длина строки (синхронизировано с black)
line-length = 100
# Целевая версия Python
target-version = "py312"
# Исключаемые директории
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".venv_opt",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "htmlcov",
    ".pytest_cache",
    ".benchmarks",
]

# ISSUE 020: Добавлен явный select для правил линтинга
[tool.ruff.lint]
select = [
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "W",       # pycodestyle warnings
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # bugbear
    "C4",      # flake8-comprehensions
    "SIM",     # flake8-simplify
    "RUF",     # ruff-specific rules
]
ignore = [
    "PLC2801",  # unnecessary-ellipsis - используется в Protocol классах
    "TID252",  # relative imports - допустимы в пакете
    "RUF001",  # ambiguous-unicode-character-string - русский текст в строках
    "RUF002",  # ambiguous-unicode-character-docstring - русский текст в докстроках
    "RUF003",  # ambiguous-unicode-character-comment - русский текст в комментариях
]

[tool.ruff.format]
# Настройки форматирования ruff
# Синхронизировано с black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
# Конфигурация black для форматирования кода
# ИСПРАВЛЕНИЕ 27: Black форматирование для всех Python файлов

# Максимальная длина строки
line-length = 100
# ISSUE 011: Удалены устаревшие версии py38, py39
target-version = ['py310', 'py311', 'py312']
# Исключаемые директории
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.venv_opt
  | _build
  | buck-out
  | build
  | dist
  | venv
  | htmlcov
  | \.pytest_cache
  | \.benchmarks
)/
'''
# Включаемые директории (для явного указания)
include = '\.pyi?$'
# Использовать строковые литералы с одинарными кавычками
skip-string-normalization = false
# Стабильный стиль (не экспериментальный)
preview = false
# Быстрый режим (пропуск проверок безопасности)
fast = false
# Количество отступов (пробелов)
skip-magic-trailing-comma = false

[tool.isort]
# Конфигурация isort для сортировки импортов
# ИСПРАВЛЕНИЕ 28: Isort для согласованной сортировки импортов

# Профиль black для совместимости
profile = "black"
# Максимальная длина строки
line_length = 100
# Отключаем split-on-trailing-comma для совместимости с ruff formatter
split-on-trailing-comma = false
# Автоматическое определение стандартной библиотеки
known_standard_library = [
    "abc",
    "argparse",
    "asyncio",
    "atexit",
    "base64",
    "collections",
    "contextlib",
    "csv",
    "dataclasses",
    "datetime",
    "enum",
    "fcntl",
    "functools",
    "gc",
    "hashlib",
    "importlib",
    "inspect",
    "io",
    "ipaddress",
    "json",
    "logging",
    "mmap",
    "operator",
    "os",
    "pathlib",
    "platform",
    "queue",
    "re",
    "shutil",
    "signal",
    "socket",
    "sqlite3",
    "string",
    "subprocess",
    "sys",
    "tempfile",
    "threading",
    "time",
    "traceback",
    "typing",
    "unittest",
    "urllib",
    "uuid",
    "weakref",
]
# Исключаемые директории
skip = [
    ".git",
    ".mypy_cache",
    ".tox",
    ".venv",
    "build",
    "dist",
    "venv",
    "htmlcov",
    ".pytest_cache",
    ".benchmarks",
]
# Скип файлов по glob паттерну
skip_glob = []
# Комбинирование импортов из одного модуля
combine_as_imports = true
# Удаление лишних пустых строк
remove_redundant_aliases = true
# Сортировка алиасов
order_by_type = true
# Показывать изменённые файлы
verbose = false
# Тихий режим
quiet = false

[tool.pylint.MASTER]
# Конфигурация Pylint для анализа качества кода
# Отключены предупреждения которые не соответствуют архитектуре проекта
extension-pkg-allow-list = ["orjson"]
ignore = [".git", ".mypy_cache", ".tox", ".venv", "build", "dist", "venv", "htmlcov", ".pytest_cache", ".benchmarks", "tests"]
jobs = 0  # Автоопределение количества ядер
persistent = true

[tool.pylint."MESSAGES CONTROL"]
# Отключение специфичных предупреждений
disable = [
    "broad-exception-caught",  # Сознательное решение для надежной обработки ошибок
    "too-many-arguments",  # Сложные функции парсера требуют много параметров
    "too-many-positional-arguments",  # Сложные функции парсера требуют много параметров
    "too-many-return-statements",  # Функции с множеством условий выхода
    "too-many-nested-blocks",  # Сложная логика обработки
    "too-many-instance-attributes",  # Классы конфигурации имеют много полей
    "too-many-lines",  # Модули содержат много кода по дизайну
    "line-too-long",  # Ruff контролирует длину строк
    "too-many-locals",  # Сложные функции обработки данных
    "too-many-branches",  # Функции с множеством условий
    "too-many-statements",  # Сложные функции обработки
    # ISSUE-193: duplicate-code — включено после рефакторинга DRY;
    # если появляются ложные срабатывания, отключить повторно
    # "duplicate-code"
    "redefined-builtin",  # Допустимо для совместимости (str, int и т.д.)
    "no-name-in-module",  # Проблемы с динамическими импортами
    "no-member",  # Проблемы с динамическими атрибутами
    "missing-class-docstring",  # Не критично для простых классов
    "consider-iterating-dictionary",  # Не критично
    "raising-bad-type",  # Не критично
    "no-else-raise",  # Стиль кода
    "no-else-continue",  # Стиль кода
    "disallowed-name",  # Не критично
    "consider-using-enumerate",  # Стиль кода
    "cell-var-from-loop",  # Сознательное использование
    "consider-using-with",  # Сознательное решение для управления ресурсами
    "unused-variable",  # Допустимо для отладки
    "unused-argument",  # Допустимо для будущих расширений
    "import-error",  # Внешние зависимости (textual и др.)
    "unnecessary-pass",  # Не критично
    "try-except-raise",  # Допустимо для повторного выброса
    "no-self-argument",  # Не критично для cls методов
    "not-an-iterable",  # Проблемы с типами
    "used-before-assignment",  # Проблемы с анализом потока
    "useless-import-alias",  # Не критично
    "wrong-import-order",  # Isort контролирует
    "unspecified-encoding",  # Кодировка указывается явно
    "subprocess-run-check",  # Сознательное решение
    "superfluous-parens",  # Не критично
    "use-dict-literal",  # Не критично
    "use-maxsplit-arg",  # Не критично
    "missing-function-docstring",  # Не критично для внутренних функций
    "too-many-public-methods",  # Сложные классы
    "keyword-arg-before-vararg",  # Не критично
    # ISSUE-195: global-statement — используется осознанно для lazy-init singleton
    # и кэширования констант; отключение сохранено
    "global-statement",  # Lazy-init singleton в constants.py
    "arguments-differ",  # Допустимо для переопределения
    "redefined-outer-name",  # Допустимо в ограниченных контекстах
    "raise-missing-from",  # Не всегда требуется
    "consider-using-f-string",  # Не критично
    "attribute-defined-outside-init",  # Допустимо для инициализации
    "reimported",  # Не критично
    "no-else-return",  # Стиль кода
    "invalid-name",  # Допустимо для совместимости
    "import-outside-toplevel",  # Допустимо для опциональных зависимостей
    "protected-access",  # Допустимо для внутреннего использования
    # ISSUE-194: logging-fstring-interpolation — включено после исправления f-strings в логах
    # Если появляются предупреждения, отключить повторно
    # "logging-fstring-interpolation"
    "no-value-for-parameter",  # Проблемы с анализом
    "too-few-public-methods",  # Не критично
    "undefined-variable",  # Проблемы с анализом потока
]

[tool.pylint.FORMAT]
# Настройки форматирования
max-line-length = 100
single-line-if-stmt = true

[tool.pylint.DESIGN]
# Настройки дизайна
max-args = 10
max-locals = 20
max-returns = 10
max-branches = 20
max-statements = 60
max-attributes = 15
max-public-methods = 25

[tool.pylint.BASIC]
# Имена констант
const-rgx = "(_?[A-Z][A-Z0-9_]*|__[A-Z0-9_]+__)$"
# Имена модулей
module-rgx = "(_?[a-z0-9_]+)$"

# ISSUE 017: Удалён [tool.autoflake] — pre-commit обрабатывает это

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
    "-m",
    "not requires_chrome and not requires_network",
    "--cov=parser_2gis",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",
]
markers = [
    "slow: медленные тесты",
    "integration: интеграционные тесты",
    "gui: тесты GUI",
    "requires_chrome: тесты, требующие Chrome",
    "requires_network: тесты, требующие сеть",
    "requires_tui: тесты, требующие textual (TUI)",
    "benchmark: тесты производительности",
]
filterwarnings = [
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
    "default::DeprecationWarning",
]

[tool.coverage.run]
# Конфигурация coverage
# ИСПРАВЛЕНИЕ 24: Per-file coverage требования

source = ["parser_2gis"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/.pytest_cache/*",
    "*/htmlcov/*",
    "parser_2gis/tui_textual/*",
]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
    "if __name__ == .__main__.:",
]
show_missing = true
sort = "Name"
precision = 2
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"
title = "Coverage report for parser-2gis"

[tool.mypy]
# Конфигурация mypy для статической типизации

python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
    "tests",
]
